--- a/src/sass/modules/_info.scss
+++ b/src/sass/modules/_info.scss
@@ -12,7 +12,7 @@
     @include order(2);
   }
   // The aside element will move under the section (.main) element
-  @media all and (min-width: $screen-phone) {
+  @media all and (min-width: $screen-sm-min) {
     .aside {
       @include flex(1 0px);
       margin-top: $margin-base-vertical;
